google login on mobile solved

--- a/src/frontend/material/homepage.css
+++ b/src/frontend/material/homepage.css
@@ -1624,8 +1624,8 @@ li.mobile-logo {
     }
 
     li.mobile-logo a img {
-        width: 50px;
-        height: 50px;
+        width: 45px;
+        height: 45px;
     }
 
     li.mobile-logo a {
